PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add Emacs-style command line key bindings description in the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/lang/bash.pdf][𝕻𝔩 - Bash]] PDF.
- In rpm-spec-mode buffers: add *pel-rpm-build* bound to ~<f12> b~ and *pel-rpm-spec-lint* bound to ~<f12> l~ .
  The first one executes the rpmbuild command with arguments provided at prompt (with -ba as defaults)
  and executes the RPM build.  Then second executes the rpmlint shell command and filter
  the output with an awk script to allow the compilation-mode to parse error/warning lines properly.
  The output of both commands are show inside a compilation-mode buffer.
- Add *pel-set-ido-use-url-at-point*, bound to ~<f11> f M-,~ .  It's value is shown by *pel-show-filemng-status* and  *pel-ido-completion-settings-string*.
- Modified key bindings for the buffer text accumulation commands. They are now all under the ~<f11> b t~ prefix
  and use an extra single letter: ~a~ for *append-to-buffer*, ~p~ for *prepend-to-buffer*, ~c~ for *copy-to-buffer*,
  ~i~ for *insert-buffer* and ~f~ for *append-to-file*.  This is easier to remember and frees key bindings for other operations.
- Add key bindings for the iflipb commands: ~<f11> b C-n~ to *iflipb-next-buffer*, ~<f11> b C-p~ to *iflipb-previous-buffer* and ~<f11> b C-k~ to *iflipb-kill-buffer.*.
  Also modified their keys into the Hydra to use the Control keys.
- *emacros-execute-named-macro* is no longer bound to ~<f11> <f4>~ to make space for a new PEL key prefix that will be used for
  dynamic behaviour change: *pel:change* key prefix.
- The first command used in the *pel:change* key prefix is *pel-toggle-overwrite-yank*, bound to ~<f11> <f4> C-y~.
  That command changes the buffer local behaviour, initially set to the value of the *pel-activate-overwrite-yank* user-option,