@@ -3562,6 +3562,16 @@ Do not enter lambda expressions."
   :type 'boolean
   :safe #'booleanp)
 
+(defcustom pel-use-emacs-ssh-file-modes nil
+  "Control whether PEL uses the emacs-ssh-file-modes.
+
+It provides support for the authorized_keys and know_hosts files."
+  :group 'pel-pkg-for-x509-file
+  :link '(url-link :tag "emacs-ssh-file-modes @ Github"
+                   "https://github.com/petere/emacs-ssh-file-modes")
+  :type 'boolean
+  :safe #'booleanp)
+(pel-put 'pel-use-emacs-ssh-file-modes :package-is :in-utils)
 
 ;; ---------------------------------------------------------------------------
 ;; SELinux Policy Definition Files Support
